CRAPP-407: Error when accessing change request in user profile
  * Protect against NPE and cover the case with unit test